name:                pure-cached
version:             0.8.0.0
homepage:            purehs.org/doc/pure-async
synopsis:            Caching facility
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-cached.git

library
  exposed-modules:     Pure.Cached
  build-depends:       base,
                       pure-time
  hs-source-dirs:      src
  default-language:    Haskell2010
